sunrise_sunset added
SPA added (Solar Positioning Algorithm)
Services scheleton added
Services: temperature unit stored in preferences
loader, services, managers

--- a/digital_clock/pubspec.yaml
+++ b/digital_clock/pubspec.yaml
@@ -3,7 +3,7 @@ description: Digital clock.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -11,6 +11,13 @@ dependencies:
   flutter_clock_helper:
     path: ../flutter_clock_helper
   cupertino_icons: ^0.1.2
+  timezone: ^0.5.4
+  spa: ^1.1.0
+  shared_preferences: any
+  flutter_bloc: any
+  rx_command: 4.0.0
+  rx_widgets: any
+  get_it: any
 
 dev_dependencies:
   flutter_test:
@@ -22,3 +29,5 @@ flutter:
     - family: PressStart2P
       fonts:
         - asset: third_party/PressStart2P-Regular.ttf
+  assets:
+    - ../assets/preloaded_data/translationsMap.json
